2007-09-14  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-11-01
	* parser: add FileInPath parameter type
	* parser: latest problems.txt with FileInPath
	* parser PENDING: AddProblem* script yet to deal with strings
	which contain blanks
	* data model: allow for [u]int32 values to be specified in hex
	(not propagated to vector types yet)
	* config-parser: add command line option to main routine to pass
	database connection info (and some other stuff)
	* Verfied that after application of problems.txt (to 1_6_0),
	HLTtable.py is parsed completely!
	
2007-09-14  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-11-00
	* add src/confdb/parser
	* this parser subdomain of the java code is independent and
	orthogonal to the 'parser' system component (ConfigDB/parser)
	* it is an administrator-only data entry tool, which is cabable to
	turn a *.py configuration created with EdmConfigToPython (found in
	CMSSW releases)
	* at the same time, it creates a 'problems.txt' file, which can be
	used with the respective script from the ConfigDB/parser component
	* add 'FileInPath' parameter type (sql & java, PARSER PENDING)

2007-09-07  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-10-08
	* optimisation to database interface, regarding the retrieval
	of templates (mostly).
	* load a module if one of its psets is incomplete, and just print
	a warning

2007-08-28  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-10-07
	* IMPORTANT BUG FIX
	* If a child parameter of a PSet of a module already stored would
	be changed, the changes wouldn't be stored. Now they are.

2007-08-24  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-10-06
	* appropriately retrieve the arrow icons in ScrollableMenu via
	getClass().getResource()
	* set the ScrollableMenu maximum hight to 80% of the screen height
	* show the converted configuration from the beginning in the
	respective tabs